--- a/WebContent/crm/searchOfflineNetwork_view.html
+++ b/WebContent/crm/searchOfflineNetwork_view.html
@@ -96,7 +96,7 @@ var COLUMNS = {
                       displaynumber="7">
                     <table id="searchTable" cellpadding="0" cellspacing="0" style="min-width: 100%; width: auto">
                         <tr>
-                            <td width="7%">录入时间:</td>
+                            <td width="7%">统计时间段:</td>
                             <td>
                                 <input id="statistical_time_period" name="statistical_time_period" type="text" style="width:60%" class="form-control"/>
                             </td>
