修改总部首页闪图查询数据一次,并修改目标值页面

--- a/WebContent/crm/office_network_list_edit.html
+++ b/WebContent/crm/office_network_list_edit.html
@@ -264,7 +264,7 @@
 		</tr>
 		<tr>
 			<td width="33.33%">
-				<p>总部上会通过数量：</p>
+				<p>总部上会通过数量：<span style="color: red">*</span></p>
 				<p><input type="text" onkeyup="value=value.replace(/[^\d.]/g,'')" name="through_quantity" id="through_quantity"/></p>
 			</td>
 			<td>
